@@ -618,7 +618,11 @@ static inline void xnarch_restore_fpu (xnarchtcb_t *tcb)
     if (task)
 	{
 	if (!task->used_math)
+            {
+            stts();
+
 	    return;	/* Uninit fpu area -- do not restore. */
+            }
 
 	/* Tell Linux that this task has altered the state of the FPU
 	   hardware. */
